# hierarchical_decision_rules

./: .gitignore  C_depth_lca.pkl  C_info_lca.pkl  README.md  heuristics.py  hierarchy.py  metrics.py  pyproject.toml  setup.py  test.ipynb  tiredimagenet_hierarchy_idx.pkl
configs/datasets/: config_inat19.json  config_tieredimagenet.json  config_tieredimagenet_tiny.json
configs/heuristics/: argmax_leaves.json  confidence_threshold.json  crm_bm.json  expected_information.json  hie.json  information_threshold.json  plurality.json  top_down.json
configs/metrics/: accuracy.json  hamming.json  hf0_5.json  hf1.json  hf2.json  hfbeta.json  mistake_severity.json  wu_palmer.json  zhao.json
heuristics/: base_heuristic.py  confidence_threshold.py  crm_bm.py  hie.py  plurality.py  top_down.py
hierarchy/: hierarchy.py  utils.py
hierulz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hierulz/datasets/: __init__.py  dataset.py  get_dataset.py  get_dataset_config.py  registry.py
hierulz/heuristics/: __init__.py  confidence_threshold.py  crm_bm.py  expected_information.py  hie.py  information_threshold.py  plurality.py  registry.py
hierulz/hierarchy/: __init__.py  hierarchy.py  load_hierarchy.py
hierulz/interface/: __init__.py  interface_hclassification.py
metrics/: __init__.py  accuracy.py  base_metric.py  hamming_loss.py  hf_beta_score.py  leaf2leaf_metric.py  mistake_severity.py  node2leaf_metric.py
results/: evaluation_results.json
scripts/: interface.py  run_and_evaluate_pretrained_models_tieredimagenet.sh  run_evaluation.py  run_inference.py
(+42 files in other folders)
